{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 70,
  "lineage": "33645f19-abef-5152-95f3-13b78b0a9d39",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "lb_ip",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.234.122.240",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-01-30T02:28:38.062-08:00",
            "id": "projects/astute-vortex-246508/regions/europe-west3/addresses/andy-udacity-cluster-lb-ip",
            "name": "andy-udacity-cluster-lb-ip",
            "network_tier": "PREMIUM",
            "project": "astute-vortex-246508",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/regions/europe-west3/addresses/andy-udacity-cluster-lb-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "common",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-30T02:28:38.283-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/astute-vortex-246508/global/firewalls/andy-udacity-cluster-common",
            "name": "andy-udacity-cluster-common",
            "network": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/global/networks/andy-udacity-cluster",
            "priority": 1000,
            "project": "astute-vortex-246508",
            "self_link": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/global/firewalls/andy-udacity-cluster-common",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "control_plane",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-30T02:28:37.983-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/astute-vortex-246508/global/firewalls/andy-udacity-cluster-control-plane",
            "name": "andy-udacity-cluster-control-plane",
            "network": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/global/networks/andy-udacity-cluster",
            "priority": 1000,
            "project": "astute-vortex-246508",
            "self_link": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/global/firewalls/andy-udacity-cluster-control-plane",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-01-30T02:28:37.984-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/astute-vortex-246508/global/firewalls/andy-udacity-cluster-internal",
            "name": "andy-udacity-cluster-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/global/networks/andy-udacity-cluster",
            "priority": 1000,
            "project": "astute-vortex-246508",
            "self_link": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/global/firewalls/andy-udacity-cluster-internal",
            "source_ranges": [
              "10.240.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "control_plane",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "creation_timestamp": "2020-01-30T02:28:53.755-08:00",
            "id": "projects/astute-vortex-246508/regions/europe-west3/forwardingRules/andy-udacity-cluster-apiserver",
            "ip_address": "35.234.122.240",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "andy-udacity-cluster-apiserver",
            "network_tier": "PREMIUM",
            "port_range": "6443-6443",
            "project": "astute-vortex-246508",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/regions/europe-west3/forwardingRules/andy-udacity-cluster-apiserver",
            "target": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/regions/europe-west3/targetPools/andy-udacity-cluster-control-plane"
          },
          "dependencies": [
            "google_compute_address.lb_ip",
            "google_compute_http_health_check.control_plane",
            "google_compute_instance.control_plane",
            "google_compute_subnetwork.subnet",
            "google_compute_target_pool.control_plane_pool"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "control_plane",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200129a",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/zones/europe-west3-a/disks/andy-udacity-cluster-control-plane-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/astute-vortex-246508/zones/europe-west3-a/instances/andy-udacity-cluster-control-plane-1",
            "instance_id": "1082380628887802169",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "sshKeys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCs9vvi+mIanyiAM3XT2Wn+sUYgPWekFHdjlQb2Wh+V+qt1bHf+Kmamoy038D1pkRvIGWVvI+xeNkaZtA456JXiTXutzwOE1XX9dGqWN0BpOThyA7sSGe4UVzGvGLa01UksuDxN4R9gg5ydWjuT0EosT8S+5rVQ1d4u8BwkTluea770PHwHMngFzs40jrJoN3dY5p4Bgu7hEaVeN7cE8Zm3HqF5fQCIjxuYp9cmIgJu+N3GJdZLEtyGANDZpBUVywnum52Qlb8kj4MN7hSum7uL7daU0Ok7jZj53NHIb/tcArare9vVSorQRdCx15n+qSkReRmxneUe5S9Ikge9DlxMpErj39iUVbVmtqgCsIv3/DBAvARiGLW/3nFHisgXvdfUXfFHDk1/WRK3ilprYGdDhWa6v8zm4ogKbd4JGoYvkZ8Hx [...]
            },
            "metadata_fingerprint": "6YA0A-8BBrE=",
            "name": "andy-udacity-cluster-control-plane-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.89.244.142",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/global/networks/andy-udacity-cluster",
                "network_ip": "10.240.0.17",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/regions/europe-west3/subnetworks/andy-udacity-cluster-subnet",
                "subnetwork_project": "astute-vortex-246508"
              }
            ],
            "project": "astute-vortex-246508",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/zones/europe-west3-a/instances/andy-udacity-cluster-control-plane-1",
            "service_account": [
              {
                "email": "433872221315-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "google_compute_subnetwork.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200129a",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/zones/europe-west3-b/disks/andy-udacity-cluster-control-plane-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/astute-vortex-246508/zones/europe-west3-b/instances/andy-udacity-cluster-control-plane-2",
            "instance_id": "6178292955462177081",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "sshKeys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCs9vvi+mIanyiAM3XT2Wn+sUYgPWekFHdjlQb2Wh+V+qt1bHf+Kmamoy038D1pkRvIGWVvI+xeNkaZtA456JXiTXutzwOE1XX9dGqWN0BpOThyA7sSGe4UVzGvGLa01UksuDxN4R9gg5ydWjuT0EosT8S+5rVQ1d4u8BwkTluea770PHwHMngFzs40jrJoN3dY5p4Bgu7hEaVeN7cE8Zm3HqF5fQCIjxuYp9cmIgJu+N3GJdZLEtyGANDZpBUVywnum52Qlb8kj4MN7hSum7uL7daU0Ok7jZj53NHIb/tcArare9vVSorQRdCx15n+qSkReRmxneUe5S9Ikge9DlxMpErj39iUVbVmtqgCsIv3/DBAvARiGLW/3nFHisgXvdfUXfFHDk1/WRK3ilprYGdDhWa6v8zm4ogKbd4JGoYvkZ8Hx [...]
            },
            "metadata_fingerprint": "6YA0A-8BBrE=",
            "name": "andy-udacity-cluster-control-plane-2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.198.151.195",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/global/networks/andy-udacity-cluster",
                "network_ip": "10.240.0.15",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/regions/europe-west3/subnetworks/andy-udacity-cluster-subnet",
                "subnetwork_project": "astute-vortex-246508"
              }
            ],
            "project": "astute-vortex-246508",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/zones/europe-west3-b/instances/andy-udacity-cluster-control-plane-2",
            "service_account": [
              {
                "email": "433872221315-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-b"
          },
          "dependencies": [
            "google_compute_subnetwork.subnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-1804-bionic-v20200129a",
                    "size": 100,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/zones/europe-west3-c/disks/andy-udacity-cluster-control-plane-3"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/astute-vortex-246508/zones/europe-west3-c/instances/andy-udacity-cluster-control-plane-3",
            "instance_id": "5336468451934277945",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "sshKeys": "root:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABgQCs9vvi+mIanyiAM3XT2Wn+sUYgPWekFHdjlQb2Wh+V+qt1bHf+Kmamoy038D1pkRvIGWVvI+xeNkaZtA456JXiTXutzwOE1XX9dGqWN0BpOThyA7sSGe4UVzGvGLa01UksuDxN4R9gg5ydWjuT0EosT8S+5rVQ1d4u8BwkTluea770PHwHMngFzs40jrJoN3dY5p4Bgu7hEaVeN7cE8Zm3HqF5fQCIjxuYp9cmIgJu+N3GJdZLEtyGANDZpBUVywnum52Qlb8kj4MN7hSum7uL7daU0Ok7jZj53NHIb/tcArare9vVSorQRdCx15n+qSkReRmxneUe5S9Ikge9DlxMpErj39iUVbVmtqgCsIv3/DBAvARiGLW/3nFHisgXvdfUXfFHDk1/WRK3ilprYGdDhWa6v8zm4ogKbd4JGoYvkZ8Hx [...]
            },
            "metadata_fingerprint": "6YA0A-8BBrE=",
            "name": "andy-udacity-cluster-control-plane-3",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.246.168.179",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/global/networks/andy-udacity-cluster",
                "network_ip": "10.240.0.16",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/regions/europe-west3/subnetworks/andy-udacity-cluster-subnet",
                "subnetwork_project": "astute-vortex-246508"
              }
            ],
            "project": "astute-vortex-246508",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/zones/europe-west3-c/instances/andy-udacity-cluster-control-plane-3",
            "service_account": [
              {
                "email": "433872221315-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring.write",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-c"
          },
          "dependencies": [
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/astute-vortex-246508/global/networks/andy-udacity-cluster",
            "name": "andy-udacity-cluster",
            "project": "astute-vortex-246508",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/global/networks/andy-udacity-cluster"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-01-27T05:11:23.355-08:00",
            "gateway_address": "10.240.0.1",
            "id": "projects/astute-vortex-246508/regions/europe-west3/subnetworks/andy-udacity-cluster-subnet",
            "ip_cidr_range": "10.240.0.0/24",
            "name": "andy-udacity-cluster-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/global/networks/andy-udacity-cluster",
            "private_ip_google_access": false,
            "project": "astute-vortex-246508",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/astute-vortex-246508/regions/europe-west3/subnetworks/andy-udacity-cluster-subnet"
          },
          "dependencies": [
            "google_compute_network.network"
          ]
        }
      ]
    }
  ]
}